--- a/src/Style.css
+++ b/src/Style.css
@@ -22,11 +22,9 @@ a{
         color: var(--Dark);
         }
 .main{
-    background: white;
+    background: #f9f9f9;;
     box-sizing: border-box;
     padding: 1rem;
-    max-width: 1200px;
-    margin: 0 auto;
 }
 /* Botones */
 .btn{
@@ -48,9 +46,17 @@ a{
     display: grid;
     grid-template-columns: 1fr 25%;
     grid-gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .content{
     box-sizing: border-box;
     padding: 2rem 1rem;
+}
+
+@media screen and (max-width: 992px) {
+    .container{
+        grid-template-columns: 1fr;
+    }
 }
