--- a/src/components/Jobs/Jobs.css
+++ b/src/components/Jobs/Jobs.css
@@ -53,7 +53,24 @@
     background: #e8e8e8;
 }
 
-.job__button--shareButton{
+.job__button-shareButton{
     border:none;
     margin: 0;
 }
+
+.job__icon{
+    background-size: 125px 25px;
+}
+    .BACKEND {background-position: 0 0;}
+    .FRONTEND { background-position: -25px 0;}
+    .SOCIAL_MEDIA {background-position: -75px 0;}
+    .UI_UX{background-position: -50px 0;}
+    .VENTAS{background-position: -100px 0;}
+    
+    .job__icon i{
+        background-size: 25px 25px;
+        display: block;
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+    }
