--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,11 @@
 .header{
     align-items: center;
-    box-sizing: border-box;
     border-bottom: 1px solid var(--LigthGreen);
+    box-sizing: border-box;
     display: flex;
     height: 4rem;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin: 0 auto;
+    max-width: 1200px;
     padding: 0 1rem;
 }
