--- a/src/components/Jobs/Jobs.css
+++ b/src/components/Jobs/Jobs.css
@@ -57,15 +57,17 @@
     border:none;
     margin: 0;
 }
-
+.job__icons{
+    display: flex;
+}
 .job__icon{
     background-size: 125px 25px;
 }
-    .BACKEND {background-position: 0 0;}
-    .FRONTEND { background-position: -25px 0;}
+    .SOFTWARE_DEVELOP {background-position: 0 0;}
+    .REMOTE { background-position: -25px 0;}
     .SOCIAL_MEDIA {background-position: -75px 0;}
-    .UI_UX{background-position: -50px 0;}
-    .VENTAS{background-position: -100px 0;}
+    .DESIGNER{background-position: -50px 0;}
+    .SALES{background-position: -100px 0;}
     
     .job__icon i{
         background-size: 25px 25px;
