--- a/src/components/Jobs/Jobs.css
+++ b/src/components/Jobs/Jobs.css
@@ -68,7 +68,7 @@
     .REMOTE { background-position: -25px 0;}
     .SOCIAL_MEDIA {background-position: -75px 0;}
     .DESIGNER{background-position: -50px 0;}
-    .SALES{background-position: -100px 0;}
+    .BUSINESS_INTELLIGENCE{background-position: -100px 0;}
     
     .job__icon i{
         background-size: 25px 25px;
