--- a/src/Style.css
+++ b/src/Style.css
@@ -25,7 +25,7 @@ a{
         color: var(--Dark);
         }
 .main{
-    background: #f9f9f9;;
+    background: #f9f9f9;
     box-sizing: border-box;
     padding: 1rem;
 }
@@ -99,4 +99,7 @@ a{
 .paginator{
     display: flex;
     justify-content: space-between;
+}
+.displayNone{
+    display: none;
 }
