--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -27,7 +27,6 @@ a{
 .main{
     background: #f9f9f9;
     box-sizing: border-box;
-    padding: 1rem;
 }
 /* Botones */
 .btn{
@@ -78,11 +77,6 @@ a{
     padding: 2rem 1rem;
 }
 
-@media screen and (max-width: 992px) {
-    .container{
-        grid-template-columns: 1fr;
-    }
-}
 
 /* ERROR  */
 .error{
@@ -102,4 +96,17 @@ a{
 }
 .displayNone{
     display: none;
+}
+
+@media screen and (max-width: 720px) {
+    .container{
+        grid-template-columns: 1fr;
+    }
+    .content{
+        order: 1;
+    }
+    .sidebar{
+        padding: 1rem 1rem 0;
+        order: 0;
+    }
 }
