--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -15,3 +15,10 @@
     background-position: center center;
     color: white;
 }
+
+
+@media screen and (max-width: 720px){
+    .sidebar > .card{
+        margin: 0;
+    }
+}
