--- a/src/components/utils/loading.css
+++ b/src/components/utils/loading.css
@@ -2,7 +2,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: flex-start;
   }
   
