--- a/src/components/Jobs/Jobs.css
+++ b/src/components/Jobs/Jobs.css
@@ -5,14 +5,25 @@
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
     margin-bottom: 1rem;
     padding: 1rem 1.5rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: 8rem 1fr 25%;
+    grid-gap: 1rem;
 }
-
+.card__img{
+    width: 8rem;
+    height: 8rem;
+}
+    .card__img img{
+        object-fit: cover;
+        border-radius: .5rem;
+        width: 100%;
+        height: 100%;
+    }
 .card__header {
-    width: 50%;
+
 }
 .card__body{
-    width: 50%;
+
 }
 
 .card__header--title{
@@ -98,13 +109,23 @@
 
 @media screen and (max-width: 720px){
     .card{
-        display: block;
+        padding: .85rem;
+        grid-template-columns: 6rem 1fr;
+        grid-gap: .85rem;
     }
-    
+    .card__img{
+        width: 6rem;
+        height: 6rem;
+        grid-row: 1 / 3;
+    }
+    .card__body{
+        grid-column: 2;
+    }
     .job__info{
         align-items: flex-start;
     }
-    .card__header, .card__body{
-        width: 100%;
+    .icons-info{
+        display: none;
     }
+
 }
