--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -97,7 +97,16 @@ a{
 .displayNone{
     display: none;
 }
+/* CARD  */
 
+.card {
+    background: #fff;
+    border: 1px solid #f9f9f9;
+    border-radius: .5rem;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+    margin-bottom: 1rem;
+    padding: 1rem 1.5rem;
+}
 @media screen and (max-width: 720px) {
     .container{
         grid-template-columns: 1fr;
