--- a/src/assets/css/stl.css
+++ b/src/assets/css/stl.css
@@ -110,3 +110,12 @@ a{
         order: 0;
     }
 }
+
+.card{
+    background: #fff;
+    border: 1px solid #f9f9f9;
+    border-radius: .5rem;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+    margin-bottom: 1rem;
+    padding: 1rem 1.5rem;
+}
