--- a/src/assets/css/stl.css
+++ b/src/assets/css/stl.css
@@ -30,11 +30,14 @@ a{
 }
 /* Botones */
 .btn{
-    display: block;
-    border-radius: .25rem;
+    align-items: center;
     background: var(--Red);
-    cursor: pointer;
+    border-radius: .25rem;
     color: white;
+    cursor: pointer;
+    display: flex;
+    font-weight: 500;
+    justify-content: center;
     padding: .5rem 1rem;
     transition: all .3s;
 }
