--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -9,3 +9,36 @@
     max-width: 1200px;
     padding: 0 1rem;
 }
+
+.header__right{
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+}
+.header__right--profile{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: 0 1rem;
+    font-weight: 500;
+}
+.header__right--profile:hover{
+    color: var(--Green);
+
+}
+.header__right--icon{
+    background:  var(--Green);
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    color: white;
+    padding: .25rem;
+    margin-right: .5rem;
+}
+.header__right--icon:hover{
+    background: var(--Yellow);
+    color: white;
+}
+.header__right--plus{
+    margin-right: .5rem;
+}
