--- a/src/assets/css/stl.css
+++ b/src/assets/css/stl.css
@@ -37,6 +37,7 @@ a{
     color: white;
     padding: .5rem 1rem;
     transition: all .3s;
+    border: none;
 }
     .btn:hover{
         color:  var(--Dark);
@@ -119,3 +120,29 @@ a{
     margin-bottom: 1rem;
     padding: 1rem 1.5rem;
 }
+
+/* Forms  */
+.form{
+    width: 80%;
+    margin: 0 auto;
+}
+.form__group{
+    position: relative;
+    margin-bottom: 1rem;
+    overflow: hidden;
+}
+
+input, select, textarea{
+    border: 1px solid var(--Dark);
+    border-radius: .25rem;
+    box-sizing: border-box;
+    display: block;
+    padding: .85rem 1.8rem;
+    transition: all .5s;
+    width: 100%;
+}
+input:focus, input:active{
+    padding-left: .5rem;
+    border: 1px solid var(--Green);
+}
+
