upload imagen and firebase connect, but no save image on storage of firebase. But is working upload imagen and tray to save image on Base64

--- a/src/assets/css/stl.css
+++ b/src/assets/css/stl.css
@@ -50,6 +50,10 @@ a{
         color: white;
         background: var(--Blue);
     }
+    .btn-green{
+        color: white;
+        background: var(--Green);
+    }
     .btn-orange{
         color: white;
         background: var(--Orange);
