--- a/src/assets/css/stl.css
+++ b/src/assets/css/stl.css
@@ -130,19 +130,6 @@ a{
     }
 }
 
-.card{
-    background: #fff;
-    border: 1px solid #f9f9f9;
-    border-radius: .5rem;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
-    margin-bottom: 1rem;
-    padding: 1rem 1.5rem;
-}
-
-.mr-1{
-    margin-right: .5rem;
-}
-
 /* Forms  */
 .form{
     width: 80%;
@@ -171,4 +158,13 @@ input:focus, input:active{
 .button--inline{
     display: flex;
     justify-content: space-around;
+}
+
+/* Login Box  */
+.login__content{
+    height: 100vh;
+    width: 100%;
+}
+.login__box {
+    height: 100vh;
 }
