--- a/src/assets/css/stl.css
+++ b/src/assets/css/stl.css
@@ -31,17 +31,13 @@ a{
 }
 /* Botones */
 .btn{
-    align-items: center;
     background: var(--Red);
     border-radius: .25rem;
+    border: none;
     color: white;
-    cursor: pointer;
-    display: flex;
     font-weight: 500;
-    justify-content: center;
     padding: .5rem 1rem;
     transition: all .3s;
-    border: none;
 }
     .btn:hover{
         color:  var(--Dark);
@@ -128,6 +124,26 @@ a{
         padding: 1rem 1rem 0;
         order: 0;
     }
+    .buttons__movil{
+        position: fixed;
+        right: 0;
+        width: 36px;
+        bottom: 20%;
+    }
+        .button__movil .login{
+            margin: 0;
+        }
+        .buttons__movil svg{
+            margin: 0 !important;
+        }
+        .buttons__movil .txt{
+            display: none;
+        }
+        .buttons__movil .button{
+            margin: 0 !important;
+            max-width: 36px;
+            padding: .25rem;
+        }
 }
 
 /* Forms  */
