[Style] Bulma CSS format
  - Format Cards
  - Forms
  - Texts
  - Delete not used CSS

--- a/src/component/jobs/Jobs.css
+++ b/src/component/jobs/Jobs.css
@@ -115,5 +115,11 @@
     .icons-info{
         display: none;
     }
-
+    .card__header--title{
+        font-size: 1.25rem !important;
+        margin: 0 !important;
+    }
+    .job__city{
+        margin: 0;
+    }
 }
