--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -1,4 +1,4 @@
-.categories, .newJob{
+.categories{
     display: block;
 }
 .categories-link{
@@ -6,12 +6,25 @@
     display: inline-flex;
     padding: .25rem 0;
     width: 100%;
+    position: relative;
+    transition: all .5s;
 }
-
-.newJob{
-    background: var(--Red);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    color: white;
+.categories-link::after{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0%;
+    content: '.';
+    color: transparent;
+    background: var(--Blue);
+    height: 1px;
+    transition: all .5s;
 }
+.categories-link:hover{
+    font-weight: 500;
+}
+.categories-link:hover:after{
+    width: 100%;
+  }
