--- a/src/component/inputs/Form.css
+++ b/src/component/inputs/Form.css
@@ -43,3 +43,71 @@
 .select:not(.is-multiple):not(.is-loading)::after{
     border-color: var(--Blue) !important;
 }
+
+.switch-button {
+    background-color: var(--Dark);
+    border-radius: 1rem;
+    overflow: hidden;
+    width: 80px;
+    text-align: center;
+    font-size: small;
+    letter-spacing: 1px;
+    color: white;
+    position: relative;
+    padding-right: 40px;
+    position: relative;
+  }
+  .switch-button:before {
+    content: "Si";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    pointer-events: none;
+  }
+  .switch-button-checkbox {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
+  }
+  .switch-button-checkbox:checked + .switch-button-label:before{
+    transform: translateX(40px);
+    background-color: var(--Blue);
+    transition: transform 300ms linear;
+  }
+
+  .switch-button-checkbox + .switch-button-label {
+    position: relative;
+    padding: 5px;
+    display: block;
+    user-select: none;
+    pointer-events: none;
+  }
+  .switch-button-label::before{
+      background-color: var(--Red);
+  }
+  .switch-button-checkbox + .switch-button-label:before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 1rem;
+    transform: translateX(0);
+    transition: transform 300ms;
+  }
+  .switch-button-checkbox + .switch-button-label .switch-button-label-span {
+    position: relative;
+  }
