[REFACTOR] MVP clean code
- Add Email for free option
- Delete logo en jobs
- Sidebar message charity

--- a/src/component/jobs/Jobs.css
+++ b/src/component/jobs/Jobs.css
@@ -1,7 +1,7 @@
 .card--job {
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: 8rem 1fr 25%;
+    grid-template-columns: 1fr 25%;
 }
 .card__img{
     width: 8rem;
