--- a/src/component/jobs/Jobs.css
+++ b/src/component/jobs/Jobs.css
@@ -114,16 +114,13 @@
 @media screen and (max-width: 720px){
     .card{
         padding: .85rem;
-        grid-template-columns: 6rem 1fr;
+        grid-template-columns: 1fr;
         grid-gap: .85rem;
     }
     .card__img{
         width: 6rem;
         height: 6rem;
         grid-row: 1 / 3;
-    }
-    .card__body{
-        grid-column: 2;
     }
     .job__info{
         align-items: flex-start;
