--- a/src/component/jobs/Jobs.css
+++ b/src/component/jobs/Jobs.css
@@ -79,7 +79,7 @@
 }
     .software_developer {background-position: 0 0;}
     .REMOTE { background-position: -25px 0;}
-    .social_media_managers {background-position: -75px 0;}
+    .social_media {background-position: -75px 0;}
     .designers{background-position: -50px 0;}
     .comercial{background-position: -100px 0;}
     .seo{background-position: -125px 0;}
