[FEAT] Stiky category menu sidebar. Change text on add new job and disclaimer footer back

--- a/src/assets/css/stl.css
+++ b/src/assets/css/stl.css
@@ -67,6 +67,9 @@ a{
 }
 .home__sidebar{
     grid-column: span 3;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 /* ERROR  */
 .error{
@@ -105,6 +108,7 @@ a{
     .home__sidebar{
         grid-column: span 12;
         order: 0;
+        position: relative;
     }
 }
 
