--- a/public/css/stl.css
+++ b/public/css/stl.css
@@ -152,3 +152,17 @@ a{
     font-size: .8rem;
     text-align: right;
 }
+
+.software_developer {background-position: 0 0;}
+.REMOTE { background-position: -25px 0;}
+.social_media {background-position: -75px 0;}
+.designers{background-position: -50px 0;}
+.comercial{background-position: -100px 0;}
+.seo{background-position: -125px 0;}
+.soporte{background-position: -150px 0;}
+.qa{background-position: -175px 0;}
+.copywriting{background-position: -200px 0;}
+.seguridad{background-position: -225px 0;}
+.reclutadores{background-position: -250px 0;}
+.project_managers{background-position: -275px 0;}
+.web_developers{background-position: -300px 0;}
