--- a/public/css/Form.module.css
+++ b/public/css/Form.module.css
@@ -44,7 +44,7 @@
     border-color: var(--Blue) !important;
 }
 
-.switch-button {
+.switchButton {
     background-color: rgb(204, 204, 204);
     border-radius: 1rem;
     overflow: hidden;
@@ -57,7 +57,7 @@
     padding-right: 40px;
     position: relative;
   }
-  .switch-button:before {
+  .switchButton:before {
     content: "Si";
     position: absolute;
     top: 0;
@@ -70,7 +70,7 @@
     z-index: 3;
     pointer-events: none;
   }
-  .switch-button-checkbox {
+  .switchButtonCheckbox {
     cursor: pointer;
     position: absolute;
     top: 0;
@@ -81,23 +81,23 @@
     opacity: 0;
     z-index: 2;
   }
-  .switch-button-checkbox:checked + .switch-button-label:before{
+  .switchButtonCheckbox:checked + .switchButtonLabel:before{
     transform: translateX(40px);
     background-color: var(--Blue);
     transition: transform 300ms linear;
   }
 
-  .switch-button-checkbox + .switch-button-label {
+  .switchButtonCheckbox + .switchButtonLabel {
     position: relative;
     padding: 5px;
     display: block;
     user-select: none;
     pointer-events: none;
   }
-  .switch-button-label::before{
+  .switchButtonLabel::before{
       background-color: var(--Red);
   }
-  .switch-button-checkbox + .switch-button-label:before {
+  .switchButtonCheckbox + .switchButtonLabel:before {
     content: "";
     height: 100%;
     width: 100%;
@@ -108,6 +108,6 @@
     transform: translateX(0);
     transition: transform 300ms;
   }
-  .switch-button-checkbox + .switch-button-label .switch-button-label-span {
+  .switchButtonCheckbox + .switchButtonLabel .switchButtonLabelSpan {
     position: relative;
   }
