--- a/public/css/Job.module.css
+++ b/public/css/Job.module.css
@@ -124,3 +124,11 @@
     color: white !important;
     background-color: var(--Blue) !important;
 }
+@media screen and (max-width: 480px){
+    .cardJob{
+        grid-template-columns: 1fr;
+    }
+    .job__info{
+        grid-gap: 1rem;
+    }
+}
