[REFACTOR] Company refactor to Formik and order in Module CSS

--- a/public/css/Job.module.css
+++ b/public/css/Job.module.css
@@ -1,7 +1,7 @@
 .cardJob {
     display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: 1fr 25%;
+    grid-template-columns: 80px 1fr 25%;
+    gap: 1rem;
 }
 .card__img{
     width: 8rem;
