[FIX] Add company image in post jobs and change a new imge

--- a/public/css/Job.module.css
+++ b/public/css/Job.module.css
@@ -1,7 +1,7 @@
 .cardJob {
     display: grid;
-    /* grid-template-columns: 8rem 1fr 25%; */
-    grid-template-columns: 1fr 25%;
+    grid-template-columns: 8rem 1fr 25%;
+    /* grid-template-columns: 1fr 25%; */
     gap: 1rem;
 }
 .card__img{
